<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:padding="8dp">

    <TextView
        android:id="@+id/your_coordinates_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/your_coordinates"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/latitude_longitude_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_coordinates_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/latitude_longitude"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitude_longitude_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_text_view"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/time"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/location_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/_00_00"
        android:textColor="@android:color/white"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/start_location_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@drawable/rounded_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_update_time"
        android:layout_marginTop="50dp"
        android:text="@string/start_location" />

    <Button
        android:id="@+id/stop_location_button"
        android:background="@drawable/rounded_shape"
        android:enabled="false"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_location_button"
        android:text="@string/stop_location" />

</RelativeLayout>